gif added + styling

--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -10,8 +10,8 @@ showcase:
   description: "A self starter with an innovative mindset and overall great guy to talk to (especially when coffee and cake is involved)."
   image:
     alt: "Showcase keyboard and mouse image"
-    x: "img/showcase/showcase.png"
-    _2x: "img/showcase/showcase@2x.png"
+    x: "img/showcase/PATCH.gif"
+    _2x: "img/showcase/PATCH@2x.gif"
   imageMobile:
     alt: "Showcase keyboard and mouse image"
     x: "img/showcase/showcase-mobile.jpg"
