Updated project button

--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -97,7 +97,7 @@ client_and_work:
     - title: "Age UK - Volunteer Matching"
       description: "An app built to connect seniors and volunteers based on mutual interests and hobbies"
       button:
-        icon: "icon-arrow-right"
+        icon: "icon-arrow-left"
         btnText: "GitHub Repo"
         URL: "https://github.com/poliver24/Age-UK-Volunteer-Matching"
       image:
@@ -119,7 +119,7 @@ client_and_work:
     - title: "Acebook"
       description: "Our take on Facebook, completed using Ruby on Rails and Postgres Database integration with Active Record."
       button:
-        icon: "icon-arrow-right"
+        icon: "icon-arrow-left"
         btnText: "GitHub Repo"
         URL: "https://github.com/poliver24/Acebook"
       image:
