--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -26,12 +26,10 @@ about:
   enable: true
   title: "Who am I?"
   content: '<p class="lead">
-    	I’m a Full-Stack Developer, currently based in London UK.
-      A recent graduate from one of Europe’s most selective coding bootcamps, Makers Academy. 
-      With a background and BSc in Engineering, I enjoy following a process driven approach, and work exceptionally well in an Iterative/Agile environment. 
+      I’m a Full-Stack Developer, currently based in London UK. A recent graduate from one of Europe’s most selective coding boot camps, Makers Academy. With a background and BSc in Engineering, I enjoy following a process-driven approach and work exceptionally well in an Iterative/Agile environment.
     </p>
     <p class="lead">
-      With experience in a number of technologies including Ruby, JavaScript, React, and AWS I am now looking to land a Junior Developer role to further learn and develop my skills. 
+      With experience in several technologies including Ruby, JavaScript, React, and AWS I am now looking to land a Junior Developer role to further learn and develop my skills. 
     </p>'
   button:
     icon: "icon-github-line"
@@ -106,7 +104,7 @@ client_and_work:
       is_even: false
 
     - title: "Space Trash"
-      description: "A research project created to tackle the ever growing Space Debris problem. Featuring Machine Learning using TensorFlow and 3D Visualisation with CesiumJS."
+      description: "A research project to tackle the ever-growing Space Debris problem. Featuring Machine Learning using TensorFlow and 3D Visualisation with CesiumJS."
       button:
         icon: "icon-arrow-right"
         btnText: "GitHub Repo"
